--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.15"
+    "astro": "^4.5.15",
+    "astro-icon": "^1.1.0"
+  },
+  "devDependencies": {
+    "@iconify-json/tabler": "^1.1.109",
+    "tailwindcss": "^3.4.3"
   }
 }
