--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.5.15",
-    "astro-icon": "^1.1.0"
+    "astro-icon": "^1.1.0",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.1.109",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss-animated": "^1.0.1"
   }
 }
