--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
+    "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.5.15",
     "astro-icon": "^1.1.0",
     "tailwindcss": "^3.4.3"
